--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 height: auto;
                 display: block;
                 image-rendering: pixelated;
+                object-fit: contain;
             }
             .back {
                 margin-bottom: 2rem;
@@ -87,7 +88,7 @@
                 return { frontmatter, content: markdown };
             }
 
-            // Floyd-Steinberg dithering
+            // Floyd-Steinberg dithering with monochrome conversion
             function ditherImage(img, callback) {
                 const canvas = document.createElement("canvas");
                 const ctx = canvas.getContext("2d");
@@ -106,53 +107,56 @@
                 for (let y = 0; y < canvas.height; y++) {
                     for (let x = 0; x < canvas.width; x++) {
                         const i = (y * canvas.width + x) * 4;
-                        const oldR = data[i];
-                        const oldG = data[i + 1];
-                        const oldB = data[i + 2];
 
-                        const newR = oldR < 128 ? 0 : 255;
-                        const newG = oldG < 128 ? 0 : 255;
-                        const newB = oldB < 128 ? 0 : 255;
+                        // Convert to grayscale using luminance formula
+                        const gray =
+                            data[i] * 0.299 +
+                            data[i + 1] * 0.587 +
+                            data[i + 2] * 0.114;
 
-                        data[i] = newR;
-                        data[i + 1] = newG;
-                        data[i + 2] = newB;
+                        // Threshold to black or white
+                        const newVal = gray < 128 ? 0 : 255;
 
-                        const errR = oldR - newR;
-                        const errG = oldG - newG;
-                        const errB = oldB - newB;
+                        // Set all RGB channels to same value (monochrome)
+                        data[i] = newVal;
+                        data[i + 1] = newVal;
+                        data[i + 2] = newVal;
 
+                        // Calculate error
+                        const err = gray - newVal;
+
+                        // Distribute error to neighboring pixels
                         if (x + 1 < canvas.width) {
                             data[(y * canvas.width + x + 1) * 4] +=
-                                (errR * 7) / 16;
+                                (err * 7) / 16;
                             data[(y * canvas.width + x + 1) * 4 + 1] +=
-                                (errG * 7) / 16;
+                                (err * 7) / 16;
                             data[(y * canvas.width + x + 1) * 4 + 2] +=
-                                (errB * 7) / 16;
+                                (err * 7) / 16;
                         }
                         if (x - 1 >= 0 && y + 1 < canvas.height) {
                             data[((y + 1) * canvas.width + x - 1) * 4] +=
-                                (errR * 3) / 16;
+                                (err * 3) / 16;
                             data[((y + 1) * canvas.width + x - 1) * 4 + 1] +=
-                                (errG * 3) / 16;
+                                (err * 3) / 16;
                             data[((y + 1) * canvas.width + x - 1) * 4 + 2] +=
-                                (errB * 3) / 16;
+                                (err * 3) / 16;
                         }
                         if (y + 1 < canvas.height) {
                             data[((y + 1) * canvas.width + x) * 4] +=
-                                (errR * 5) / 16;
+                                (err * 5) / 16;
                             data[((y + 1) * canvas.width + x) * 4 + 1] +=
-                                (errG * 5) / 16;
+                                (err * 5) / 16;
                             data[((y + 1) * canvas.width + x) * 4 + 2] +=
-                                (errB * 5) / 16;
+                                (err * 5) / 16;
                         }
                         if (x + 1 < canvas.width && y + 1 < canvas.height) {
                             data[((y + 1) * canvas.width + x + 1) * 4] +=
-                                (errR * 1) / 16;
+                                (err * 1) / 16;
                             data[((y + 1) * canvas.width + x + 1) * 4 + 1] +=
-                                (errG * 1) / 16;
+                                (err * 1) / 16;
                             data[((y + 1) * canvas.width + x + 1) * 4 + 2] +=
-                                (errB * 1) / 16;
+                                (err * 1) / 16;
                         }
                     }
                 }
