--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             .image-container {
                 box-sizing: border-box;
                 position: absolute;
+                border: dashed 1px salmon;
             }
             .image-container img {
                 width: 100%;
@@ -68,6 +69,10 @@
             .content {
                 margin-top: 2rem;
             }
+            .nanobox {
+                position: fixed;
+                top: 50%;
+                left: 10px;
         </style>
     </head>
     <body>
