--- a/index.html
+++ b/index.html
@@ -71,8 +71,14 @@
             }
             .nanobox {
                 position: fixed;
+                left: 50%;
                 top: 50%;
-                left: 10px;
+                transform: translate(-50%, -50%);
+            }
+            div.nanobox > img {
+                height: 80vh;
+                width: 80vh;
+            }
         </style>
     </head>
     <body>
