--- a/index.html
+++ b/index.html
@@ -76,10 +76,16 @@
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%, -50%);
+                display: none;
             }
             div.nanobox > img {
                 height: 30vh;
                 width: 100%;
+            }
+            .zoom-controls {
+                position: absolute;
+                display: grid;
+                right: 10px;
             }
         </style>
     </head>
