--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <style>
             html {
                 zoom: 1;
-                filter: invert(0%) sepia(100%) saturate(0%) hue-rotate(0deg);
+                /*filter: invert(0%) sepia(100%) saturate(0%) hue-rotate(0deg);*/
+                filter: invert(20%) sepia(1000%) saturate(20%) hue-rotate(20deg);
             }
             body {
                 font-family: monospace;
